fix: style for code blocks in dark mode
see i.e. https://bwiggs.com/posts/2021-08-03-hugo-syntax-highlight-dark-light/

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,7 +5,11 @@
   a {
     color: #809fff;
   }
-  
+
+  code {
+    background-color: #9f96963b;
+  }
+
   html,
   body {
     color: #eee;
